css/main.css
/* ... */
.supervillain .project-link1 a::after {
  position: relative;
  width: 100%;
  transition: all 0.25s;
  transform-origin: bottom;
  display: block;
  left: 0.5rem;
}

/** Contact section **/

.contact-header h2 {
  color: white;
  font-size: 9vw;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin-bottom: 0;
  text-shadow: #1a1f24 0px 0px 15px;
}

.contact-header h2:after {
  content: "";
  width: 48vw;
  height: 5vw;
  background-color: #4d88ff;
  z-index: -1;
  position: relative;
  left: 5.5vw;
  bottom: 4.5vw;
}

.contact-form {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  width: 80%;
  height: 70vw;
}

form {
  position: relative;
  height: 70vmin;
  display: flex;
  justify-content: center;
}

.input-field input {
  width: 70vw;
  height: 5vw;
  margin: 10px 0 0px 0;
  font-size: 3vw;
  font-weight: 900;
  border: 0;
  color: white;
  background-color: #2b323a;
  outline: none;
}

.input-field input:focus,
.input-field textarea:focus {
  border: 2px solid white;
  box-shadow: 0 0 10px -1px white;
  outline: none;
}


.input-field textarea {
  color: white;
  width: 70vw;
  height: 21vw;
  margin: 10px 0 0 0;
  font-size: 3vw;
  border: 0;
  font-weight: 900;
  background-color: #2b323a;
  resize: none;
  outline: 0;
}

.contact-form button {
  border: 0;
  font-size: 5vw;
  color: white;
  background: none;
  font-weight: 500;
  cursor: pointer;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  height: 12vmin;
}


.contact-form button:after {
  content: "";
  background-color: #4d88ff;
  height: 2px;
  position: relative;
  width: 24vw;
  display: block;
  cursor: pointer;
  transform-origin: bottom;
  transition: all 0.25s;
  display: block;
  z-index: 1;
}

.contact-form button:hover:after {
  transform: scaleY(16);
  z-index: 1;
}

.contact-form button span {
  position: relative;
  z-index: 2;
  text-decoration: none;
  color: white;
}

@media screen and (min-width: 300px) {
  .contact-form button:hover:after {
    transform: scaleY(13);
    z-index: 1;
  }

  .project-link1 a:hover::after {
    transform: scaleY(11);
    z-index: -1;
  }

  .project-link2 a:hover::after {
    transform: scaleY(11);
    z-index: -1;
  }

  .about .content-wrapper {
    height: 105vw;
  }

  #particles-js {
    height: 375vmax;
  }
}


@media screen and (min-width: 450px) {

  #particles-js {
    height: 450vmax;
  }

  .about-desc {
    height: 125px;
  }

  .unplugged-text h4,
  .sticky-note-text h4,
  .guess-the-word-text h4,
  .supervillain-text h4 {
    margin-top: 2vw;
  }

  .rogue-pickings-text h4 {
    font-size: 2.7vw;
  }

  .project-link1 {
    margin-bottom: 0.7rem;
  }

  .contact-form button {
    margin-top: 3vw;
    transition: all 0.25s;
  }

  .contact-form button:hover:after {
    transform: scaleY(17);
    z-index: 1;
  }
}

@media screen and (min-width: 500px) {

  #particles-js {
    height: 500vmax;
  }

  .skill-list {
    box-shadow: 0 0 25px 1px #4d88ff;
  }

  .unplugged-text h3,
  .recipe-app-text h3,
  .sticky-note-text h3,
  .rogue-pickings-text h3,
  .guess-the-word-text h3,
  .supervillain-text h3 {
    font-size: 4.5vw;
  }

  .unplugged-text h4 {
    font-size: 2.4vw;
  }

  .recipe-app-text h4,
  .sticky-note-text h4,
  .rogue-pickings-text h4,
  .guess-the-word-text h4,
  .supervillain-text h4 {
    font-size: 2.5vw;
    margin: 3vw 0;
    height: 15vw;
  }

  .project-link1 {
    margin-bottom: 2vw;
  }

  .project-link1 a,
  .project-link2 a {
    font-size: 2.5vw;
  }
}
/* ... */

